$Id: HISTORY,v 1.32 2006/06/05 07:57:51 chrisp Exp $   -*- text -*-

 disktype History
==================

Version 1 was released on Feb 11, 2003. It supported the following
formats:

File systems: FAT12/FAT16/FAT32, ext2/ext3, Minix, MFS, HFS, HFS Plus,
  ISO9660.
Partition maps: DOS/PC style, Apple.
Boot codes: LILO, GRUB, SYSLINUX, ISOLINUX, Linux kernel.
Other structures: Debian split floppy header, gzip header, Linux swap.


Version 2 was released on Feb 18, 2003. It brought improvements to the
infrastructure, making it possible to analyze the .bin file of a
.bin/.cue pair in place. In other news:

Added file systems: ReiserFS, NTFS, HPFS, Linux romfs, Linux cramfs.
Added other structures: Linux RAID physical disks, Linux LVM physical
  volumes.
Improved file systems: ISO9660, Minix.
Improved other structures: Linux swap.


Version 3 was released on Mar 15, 2003. It features an extensive
re-write of the buffering layer, in conjunction with transparent
decompression of data compressed with gzip, compress, or bzip2. Raw CD
image detection now works by actually looking at the data. In other
news:

Added file systems: UFS (some variations), JFS.
Added other structures: tar archives, cpio archives, bar archives,
  dump/restore data.
Improved file systems: ext2/ext3, ReiserFS.
Improved other structures: Linux swap.

UFS and the archive formats are based Doug Merritt's 'tapetype'
program. He posted it to Usenet back in 1992 and asked me to include
it in disktype so that the code would not be lost.


Version 4 was released on Apr 15, 2003. It features the following
improvements:

Added file systems: Linux squashfs, XFS, Amiga FS/FFS.
Added other structures: Amiga "Rigid Disk" partition map, ATARI ST
  (AHDI3) partition map.
Improved file systems: FAT12/FAT16 (a.k.a. ATARI GEMDOS).
Improved other structures: -


Version 5 was released on May 3, 2003. It includes a range of
portability fixes. Most importantly, character devices are no longer