@@ -55,17 +55,17 @@ void detect_ext234(SECTION *section, int level)
     if (get_le_long(buf + 92) & 0x0004)
       fslevel = 3;
     /* Ext4 INCOMPAT features: EXTENTS, 64BIT, FLEX_BG */
-    //if (get_le_long(buf + 96) & 0x02C0)
-    //  fslevel = 4;
+    if (get_le_long(buf + 96) & 0x02C0)
+      fslevel = 4;
     /* Ext4 RO_COMPAT features: HUGE_FILE, GDT_CSUM, DIR_NLINK, EXTRA_ISIZE */
     if (get_le_long(buf + 100) & 0x0078)
       fslevel = 4;
     /* Ext4 sets min_extra_isize even on external journals */
-    //if (get_le_short(buf + 348) >= 0x1c)
-    //  fslevel = 4;
+    if (get_le_short(buf + 348) >= 0x1c)
+      fslevel = 4;
     /* Ext4dev TEST_FILESYS flag */
-    //if (get_le_long(buf + 352) & 0x0004)
-    //  is_dev = 1;
+    if (get_le_long(buf + 352) & 0x0004)
+      is_dev = 1;
 
     print_line(level, "Ext%d%s %s", fslevel, is_dev ? "dev" : "",
                is_journal ? "external journal" : "file system");
@@ -118,6 +118,19 @@ void detect_btrfs(SECTION *section, int level)
     format_size(s, get_le_quad(buf + 0x70));
     print_line(level + 1, "Volume size %s", s);
   }
+}
+
+
+void detect_f2fs(SECTION *section, int level)
+{
+  unsigned char *buf;
+  char s[258];
+
+  if (get_buffer(section, 64 * 1024, 1024, (void **)&buf) < 1024)
+    return;
+
+   if (get_le_long(buf)==0xF2F52010)
+	print_line(level, "F2FS file system");
 }
 
 /*
